# projekt-2-malan-m

./: CMakeLists.txt
src/: main.cpp
